packages/jsts/tests/dbd/benchmark/SyntaxError/S01 JSON.parse/S01-04/reproducer.js
const fs = require('node:fs');
function foo(pkgJson) {
  var fileJson = JSON.parse(fs.readFileSync(pkgJson, 'utf8')); // Noncompliant: if json is malformed
}

foo('malformed_package.json');
